# RTVK

./: CMakeLists.txt  README.md  cpp.txt  samplevk.cpp  samplevk.h
shaders/: closesthit.rchit  closethit.spv  cpp.txt  miss.rmiss  rahit.spv  raygen.rgen  raygen.spv  rmiss.spv  rmiss2.spv  shadow.rahit  shadow.rmiss
trash/: closesthit.rchit  closethit.spv  raygen.rgen  raygen.spv  samplevk.cpp
